--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,28 @@
-cs50
-Flask
-Flask-Session
-requests
+beautifulsoup4==4.10.0
+bleach==4.1.0
+blinker==1.4
+cachelib==0.4.1
+certifi==2021.10.8
+charset-normalizer==2.0.9
+click==8.0.3
+cs50==8.0.1
+Flask==2.0.2
+Flask-Mail==0.9.1
+Flask-Session==0.4.0
+greenlet==1.1.2
+idna==3.3
+itsdangerous==2.0.1
+Jinja2==3.0.3
+MarkupSafe==2.0.1
+packaging==21.3
+pyparsing==3.0.6
+python-dotenv==0.19.2
+requests==2.26.0
+six==1.16.0
+soupsieve==2.3.1
+SQLAlchemy==1.4.29
+sqlparse==0.4.2
+termcolor==1.1.0
+urllib3==1.26.7
+webencodings==0.5.1
+Werkzeug==2.0.2
