--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 packaging==21.3
+psycopg2-binary==2.9.3
 pyparsing==3.0.6
 python-dotenv==0.19.2
 requests==2.26.0
